# spoonfed_pekzep

./: Cargo.toml  README.md  manual.md  todo.txt
docs/: 12.html  a_pai2_can2_ka1_ki1.html  ai2_sip1_huep2_hia1_kit_pua2_aim2.html  ai2_sip1_ma1_yn2.html  ai2_sip1_mun1_ma1.html  aim2_mok1.html  aim2_mok1_zep1.html  aim2_mut2_yn2_mun1.html  be1_cuk2_aim2_can2_zap2_py_kait_zep1_lip_zep1.html  be1_cuk2_aim2_lo.html  be1_cuk2_hio1_pai2_huap1_kait_yn2.html  be1_cuk2_kait_sak2_ai2_sip1_ua_nui2_pek2_zep1.html  be1_ut2_pai2_can2.html  cei2_ka1_kak_zap2_ly_sak2.html  cei2_ka1_kia1_em_nan2.html  cei2_ka1_kia1_mok1_kait_yn2.html  cei2_ka1_tei1_muo1_aim2.html  cei2_pai2_mut2_taun1_su1_hue_aim2.html  char_count.js  char_list.html  cue1_aim2_ie_zap2_a_po1_aim2.html  cuk2_mun1_aim2_mut2.html  em_nan2_mua2_nui2_lip_zep1.html  em_nan2_mua2_sui1_lip_zep1.html  et2_aim2_zau_et2_aim2_ta1.html  guk2_naip2_uo1_ka1_ho.html  hia1_at_pai2_sak2_ut2.html  hia1_be1_cuk2_hue1_ta1_mok1_ut2_ka1_xep2_xit2.html  hia1_cei2_ut2_ky1.html  hia1_guk2_pai2_uaip2_yn2.html  hia1_i2_zep1_ut2_ie_zep1_kik1.html  hia1_kait.html  hia1_kait_ie_mua2_i2_zep1.html  hia1_kait_ie_mua2_uaip2.html  hia1_mua2_zep1_ut2_mua2.html  hia1_nau_ut2_ut2_ta1_nua2.html  hia1_pai2_zep1_put_a_cuk2_mun1.html  hia1_sui1_ut2_zep1_kik1_zep1_ut2_pai2.html  hia1_sui1_ut2_zep1_kik1_zep1_ut2_zap2.html  hia1_tui2_pai2_mok1.html  (+511 more)
docs/char/: 㕮.html  一.html  七.html  万.html  三.html  (+361 more)
raw/: README.md  Spoonfed Pekzep - SpoonfedPekzep.tsv  Spoonfed Pekzep - 語彙整理（超草案）.tsv  contraction.tsv  linzklar-dismantling.tsv  字音.tsv
src/: askama_templates.rs  filters.rs  generate.rs  lib.rs  main.rs  normalizer.rs  read.rs  recurse.rs  verify.rs
templates/: char.html  char_list.html  hello.html  ind.html  phrase.html  vocab.html  vocab_list.html  vocab_list_internal.html
(+3102 files in other folders)
