[package]
name = "spoonfed_pekzep"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.130"
serde_derive = "1.0.130"
askama = "0.12.0"
pekzep_syllable = "0.1.2"
linked-hash-map = "0.5.4"
partition_eithers = "0.1.0"
readonly = "0.2.0"
env_logger = "0.10.0"
log = "0.4.14"
regex = "1.5.4"
lazy_static = "1.4.0"
match-pinyin-with-hanzi = "0.1.3"
anyhow = "1.0.44"
big_s = "1.0.2"
