[package]
name = "spoonfed_pekzep"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
serde = "1.0.188"
serde_derive = "1.0.188"
askama = "0.12.0"
pekzep_syllable = "0.1.2"
linked-hash-map = "0.5.6"
partition_eithers = "0.1.0"
readonly = "0.2.11"
env_logger = "0.10.0"
log = "0.4.20"
regex = "1.9.5"
lazy_static = "1.4.0"
match-pinyin-with-hanzi = "0.1.4"
anyhow = "1.0.75"
big_s = "1.0.2"
