[package]
name = "spoonfed_pekzep"
version = "0.1.0"
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
serde = "1.0.219"
serde_derive = "1.0.219"
askama = "0.12.0"
pekzep_syllable = "0.1.2"
linked-hash-map = "0.5.6"
partition_eithers = "0.1.0"
readonly = "0.2.13"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
match-pinyin-with-hanzi = "0.1.4"
anyhow = "1.0.98"
big_s = "1.0.2"
